<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PrivacyPolicyActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/privacy_policy_icon"
            android:contentDescription="@string/privacy_policy_btn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_polic"
            android:textColor="?android:textColor"
            android:fontFamily="@font/roboto_medium"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/child_textview_style"
            android:lineSpacingExtra="3dp"
            android:text="@string/privacy_policy" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/privacy_heading_style"
            android:text="@string/purpose_and_usage" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/child_textview_style"
            android:lineSpacingExtra="3dp"
            android:text="@string/policy_1"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/privacy_heading_style"
            android:text="@string/children_s_privacy" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/child_textview_style"
            android:lineSpacingExtra="3dp"
            android:text="@string/privacy_2"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/privacy_heading_style"
            android:text="@string/security"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/child_textview_style"
            android:lineSpacingExtra="3dp"
            android:text="@string/privacy_3" />
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/privacy_heading_style"
            android:text="@string/contact_us" />
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/child_textview_style"
            android:text="@string/privacy_4"
            android:lineSpacingExtra="3dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Agree"
            android:textColor="?android:textColor"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentBottom="true" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>